<resources>
    <string name="app_name">TwitterClone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_list">List</string>
    <string name="profile">Profile</string>
    <string name="search_title">Search</string>
    <string name="profile_picture">Profile picture</string>
    <string name="apply">Apply</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_tweet">Save Tweet</string>
    <string name="tweet_image">Tweet image</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="create_a_new_tweet">Create a new tweet</string>
    <string name="star">star</string>
    <string name="title_news_feed">News Feed</string>
</resources>